# rizzma

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  index.html  rust-toolchain.toml
.github/workflows/: ci.yml  gallery.yml  publish.yml
crates/rizzma/: Cargo.toml  README.md  docs-header.html
crates/rizzma-3d/: Cargo.toml
crates/rizzma-3d/examples/: bar3d.rs  helix3d.rs  surface3d.rs  wireframe3d.rs
crates/rizzma-3d/src/: lib.rs
crates/rizzma-artist/: Cargo.toml
crates/rizzma-artist/src/: collection.rs  image.rs  lib.rs  line.rs  marker.rs  patch.rs  quadmesh.rs
crates/rizzma-artist/tests/: render_collection.rs  render_image.rs  render_line.rs  render_patch.rs
crates/rizzma-axis/: Cargo.toml
crates/rizzma-axis/src/: axis.rs  dates.rs  lib.rs  scale.rs  ticker.rs
crates/rizzma-axis/tests/: render.rs
crates/rizzma-core/: Cargo.toml
crates/rizzma-core/src/: affine.rs  bbox.rs  color.rs  lib.rs  path.rs  rcparams.rs
crates/rizzma-core/src/color/: cmap.rs  mod.rs  named.rs  norm.rs
crates/rizzma-figure/: Cargo.toml
crates/rizzma-figure/examples/: bar_chart.rs  gallery.rs  histogram.rs  imshow_demo.rs  legend_colorbar.rs  line_plot.rs  multi_line.rs  scatter_plot.rs
crates/rizzma-figure/src/: axes.rs  colorbar.rs  figure.rs  gridspec.rs  legend.rs  lib.rs  plotting.rs  plotting_area.rs  plotting_box.rs  plotting_contour.rs  plotting_contourf.rs  plotting_grouped_bar.rs  plotting_hexbin.rs  plotting_image.rs  plotting_matrix.rs  plotting_mesh.rs  plotting_misc.rs  plotting_pie.rs  plotting_quiver.rs  plotting_stats.rs  plotting_steps.rs  plotting_stream.rs  plotting_tri.rs  plotting_violin.rs  polar.rs  richtext.rs  subplotspec.rs
crates/rizzma-figure/tests/: cross_backend_parity.rs  render_spans.rs
crates/rizzma-mathtext/: Cargo.toml
crates/rizzma-mathtext/src/: lib.rs  richtext.rs
crates/rizzma-pdf/: Cargo.toml
crates/rizzma-pdf/examples/: pdf_demo.rs
crates/rizzma-pdf/src/: lib.rs
crates/rizzma-plot/: Cargo.toml
crates/rizzma-plot/src/: lib.rs
crates/rizzma-pyplot/: Cargo.toml
crates/rizzma-pyplot/examples/: pyplot_demo.rs
crates/rizzma-pyplot/src/: lib.rs
crates/rizzma-render/: Cargo.toml
crates/rizzma-render/src/: lib.rs
crates/rizzma-skia/: Cargo.toml
crates/rizzma-skia/examples/: red_square.rs
crates/rizzma-skia/src/: lib.rs
crates/rizzma-svg/: Cargo.toml
crates/rizzma-svg/src/: lib.rs
crates/rizzma-text/: Cargo.toml
crates/rizzma-text/src/: font.rs  lib.rs  metrics.rs  span.rs  textpath.rs
crates/rizzma-wasm/: Cargo.toml
crates/rizzma-wasm/src/: lib.rs
crates/rizzma-wasm/www/: README.md  index.html
crates/rizzma/examples/: bar3d.rs  bar_chart.rs  gallery.rs  helix3d.rs  histogram.rs  imshow_demo.rs  legend_colorbar.rs  line_plot.rs  mathtext_gallery.rs  mathtext_logaxis.rs  mathtext_plot.rs  multi_line.rs  pdf_demo.rs  pyplot_demo.rs  red_square.rs  scatter_plot.rs  surface3d.rs  typography.rs  wireframe3d.rs
crates/rizzma/src/: lib.rs
crates/rizzma/src/artist/: collection.rs  image.rs  line.rs  marker.rs  mod.rs  patch.rs  quadmesh.rs
crates/rizzma/src/axis/: axis.rs  dates.rs  mod.rs  scale.rs  ticker.rs
crates/rizzma/src/core/: bbox.rs  path.rs  rcparams.rs
crates/rizzma/src/core/color/: cet_data.rs  cmap.rs  cmap_data.rs  misleading.rs  mod.rs
crates/rizzma/src/figure/: axes.rs  colorbar.rs  event.rs  figure.rs  gridspec.rs  interact.rs  legend.rs  mod.rs  plotting.rs  plotting_area.rs  plotting_box.rs  plotting_contour.rs  plotting_contourf.rs  plotting_grouped_bar.rs  plotting_hexbin.rs  plotting_image.rs  plotting_matrix.rs  plotting_mesh.rs  plotting_misc.rs  plotting_pie.rs  plotting_quiver.rs  plotting_stats.rs  plotting_steps.rs  plotting_stream.rs  plotting_tri.rs  plotting_violin.rs  polar.rs  richtext.rs  sky.rs  subplotspec.rs
crates/rizzma/src/mathtext/: mod.rs  richtext.rs
crates/rizzma/src/mplot3d/: mod.rs
crates/rizzma/src/pdf/: mod.rs
crates/rizzma/src/pyplot/: mod.rs
crates/rizzma/src/render/: mod.rs
crates/rizzma/src/show/: mod.rs  page.html  tests.rs
crates/rizzma/src/skia/: mod.rs
crates/rizzma/src/svg/: mod.rs
crates/rizzma/src/text/: font.rs  metrics.rs  mod.rs  textpath.rs
crates/rizzma/src/wasm/: mod.rs
crates/rizzma/tests/: cross_backend_parity.rs  frame_budget.rs  render.rs  render_annotation.rs  render_clip.rs  render_collection.rs  render_image.rs  render_line.rs  render_patch.rs  render_scope.rs  render_spans.rs  render_style.rs  render_twinx.rs  wasm_browser.rs
crates/rizzma/www/: README.md  index.html
demo/: index.html
demo/pkg/: README.md  package.json  rizzma.d.ts  rizzma.js  rizzma_bg.wasm  rizzma_bg.wasm.d.ts
design/: 01-architecture.md  02-plot-types.md  03-foundational-components.md  04-implementation-plan.md  05-log-scale-axis-integration.md  06-wasm-interactive-plan.md  07-twin-axes.md  08-styling.md  09-show-browser.md
tests/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
