[package]
name = "xtask"
description = "Workspace automation tasks, including golden-image comparison for rizzma tests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
image = "0.25.10"
