[package]
name = "rizzma-3d"
description = "mplot3d-equivalent: proj3d projection and art3d collections with painter's-algorithm depth sorting."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.1.0", path = "../rizzma-core" }
rizzma-render = { version = "0.1.0", path = "../rizzma-render" }
rizzma-skia = { version = "0.1.0", path = "../rizzma-skia" }
