[package]
name = "rizzma-artist"
description = "Artist scene tree (arena/slotmap) and primitives: Line2D, Patch hierarchy, markers, collections."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true
