[package]
name = "rizzma-artist"
description = "Artist scene tree (arena/slotmap) and primitives: Line2D, Patch hierarchy, markers, collections."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.0.0", path = "../rizzma-core" }
rizzma-render = { version = "0.0.0", path = "../rizzma-render" }

[dev-dependencies]
rizzma-skia = { path = "../rizzma-skia" }
