[package]
name = "rizzma-axis"
description = "Axis machinery: ticker (locators/formatters), scales, units/category, dates, and Axis/Tick/Spine drawing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.0.0", path = "../rizzma-core" }
rizzma-render = { version = "0.0.0", path = "../rizzma-render" }
rizzma-text = { version = "0.0.0", path = "../rizzma-text" }

[dev-dependencies]
rizzma-skia = { path = "../rizzma-skia" }
