[package]
name = "rizzma-figure"
description = "Figure scaffolding: GridSpec, Figure/SubFigure, Axes, layout engines, spines, legend, colorbar."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-artist = { version = "0.0.0", path = "../rizzma-artist" }
rizzma-axis = { version = "0.0.0", path = "../rizzma-axis" }
rizzma-core = { version = "0.0.0", path = "../rizzma-core" }
rizzma-render = { version = "0.0.0", path = "../rizzma-render" }
rizzma-skia = { version = "0.0.0", path = "../rizzma-skia" }
rizzma-svg = { version = "0.0.0", path = "../rizzma-svg" }
rizzma-text = { version = "0.0.0", path = "../rizzma-text" }

[dev-dependencies]
resvg = "0.47.0"
