[package]
name = "rizzma-figure"
description = "Figure scaffolding: GridSpec, Figure/SubFigure, Axes, layout engines, spines, legend, colorbar."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-artist = { version = "0.1.0", path = "../rizzma-artist" }
rizzma-axis = { version = "0.1.0", path = "../rizzma-axis" }
rizzma-core = { version = "0.1.0", path = "../rizzma-core" }
rizzma-mathtext = { version = "0.1.0", path = "../rizzma-mathtext" }
rizzma-pdf = { version = "0.1.0", path = "../rizzma-pdf" }
rizzma-render = { version = "0.1.0", path = "../rizzma-render" }
rizzma-skia = { version = "0.1.0", path = "../rizzma-skia" }
rizzma-svg = { version = "0.1.0", path = "../rizzma-svg" }
rizzma-text = { version = "0.1.0", path = "../rizzma-text" }

[dev-dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
resvg = { version = "0.47.0", default-features = false }
