[package]
name = "rizzma-mathtext"
description = "TeX-subset math layout: a box-and-glue engine rendering $...$ to glyph geometry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.0.0", path = "../rizzma-core" }
rizzma-text = { version = "0.0.0", path = "../rizzma-text" }
