[package]
name = "rizzma-plot"
description = "Axes plotting methods: plot, scatter, bar, hist, errorbar, fill_between, imshow, and the wider catalogue."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true
