[package]
name = "rizzma-pyplot"
description = "Stateful pyplot-style facade over a FigureRegistry (gcf/gca/figure/subplots/show/savefig)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.0.0", path = "../rizzma-core" }
rizzma-figure = { version = "0.0.0", path = "../rizzma-figure" }
rizzma-skia = { version = "0.0.0", path = "../rizzma-skia" }
