[package]
name = "rizzma-render"
description = "Backend-agnostic drawing contract: the Renderer trait, GraphicsContext, and Paint state."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.1.0", path = "../rizzma-core" }
