[package]
name = "rizzma-skia"
description = "Reference raster backend: implements Renderer over tiny-skia, producing PNG output."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.1.0", path = "../rizzma-core" }
rizzma-render = { version = "0.1.0", path = "../rizzma-render" }
tiny-skia = "0.12.0"
