[package]
name = "rizzma-svg"
description = "SVG vector backend: implements Renderer by serializing primitives to SVG (defs/use, clips, hatches)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.0.0", path = "../rizzma-core" }
rizzma-render = { version = "0.0.0", path = "../rizzma-render" }
