[package]
name = "rizzma-svg"
description = "SVG vector backend: implements Renderer by serializing primitives to SVG (defs/use, clips, hatches)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
png = "0.18.1"
rizzma-core = { version = "0.0.0", path = "../rizzma-core" }
rizzma-render = { version = "0.0.0", path = "../rizzma-render" }

[dev-dependencies]
resvg = { version = "0.47.0", default-features = false, features = ["raster-images"] }
