[package]
name = "rizzma-text"
description = "Embedded font sourcing and single-line text metrics via ttf-parser (wasm-safe extents)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rizzma-core = { version = "0.1.0", path = "../rizzma-core" }
ttf-parser = "0.25.1"
