[package]
name = "rizzma-wasm"
description = "Wasm/browser target: a canvas Renderer (tiny-skia Pixmap blit) plus the DOM event bridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rizzma-core = { version = "0.1.0", path = "../rizzma-core" }
rizzma-figure = { version = "0.1.0", path = "../rizzma-figure" }
rizzma-skia = { version = "0.1.0", path = "../rizzma-skia" }
wasm-bindgen = "0.2.126"
web-sys = { version = "0.3.103", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData"] }
